--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
     depends_on:
       - frontend
 
-  frontend:
-    build: ./client
-    ports:
-      - 80:80
-    restart: always
+  # frontend:
+  #   build: ./client
+  #   ports:
+  #     - 80:80
+  #   restart: always
 
