--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,28 +1,20 @@
+# ипользуем образ линукс Alpine с версией node 14
 FROM node:20.10.0-alpine
 
-# Установите Nginx
-RUN apk add --no-cache nginx
-
-# Установите рабочую папку
+# Указываем корневую папку
 WORKDIR /app
 
-# Скопируйте package.json и package-lock.json внутрь контейнера
+# Скопировать package.json и package-lock.json внутрь контейнера
 COPY package*.json ./
 
 # Устанавливаем зависимости
 RUN npm install
 
-# Копируем оставшееся приложение в контейнер
+# Копируем оставшееся пролижение в контейнер
 COPY . .
 
-# Копируем конфигурацию Nginx в conf.d
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-# Удаляем стандартный файл конфигурации Nginx
-RUN rm /etc/nginx/conf.d/default.conf
-
-# Открыть порт 80 для HTTP трафика
+# Открыть порт в нашем контейнере
 EXPOSE 80
 
-# Запустите Nginx и Node.js приложение
-CMD ["nginx", "-g", "daemon off;"]
+# Запускаем наш сервер
+CMD [ "npm", "start" ]
